--- a/Soccer-App/Soccer-App/Base.lproj/Main.storyboard
+++ b/Soccer-App/Soccer-App/Base.lproj/Main.storyboard
@@ -18,8 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mdk-tq-ebP">
-                                <rect key="frame" x="20" y="33" width="335" height="569"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M0g-2b-eyt">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Players" id="jc5-dO-snG">
+                                        <barButtonItem key="leftBarButtonItem" title="Add" id="Sda-54-sn0">
+                                            <connections>
+                                                <action selector="addPlayer:" destination="BYZ-38-t0r" id="PUp-3R-Xwo"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="zXE-Hk-b3f"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mdk-tq-ebP">
+                                <rect key="frame" x="20" y="65" width="335" height="537"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" id="NUo-Yt-zCP">
@@ -28,6 +41,19 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NUo-Yt-zCP" id="q6p-8s-WGD">
                                             <rect key="frame" x="0.0" y="0.0" width="335" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blankPlayer.png" translatesAutoresizingMaskIntoConstraints="NO" id="FEX-a8-fKd">
+                                                    <rect key="frame" x="284" y="0.0" width="43" height="43"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="43" id="izR-E3-B2H"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="FEX-a8-fKd" secondAttribute="bottom" id="9ad-J2-lfc"/>
+                                                <constraint firstItem="FEX-a8-fKd" firstAttribute="trailing" secondItem="q6p-8s-WGD" secondAttribute="trailingMargin" id="BRM-3h-dxF"/>
+                                                <constraint firstItem="FEX-a8-fKd" firstAttribute="top" secondItem="q6p-8s-WGD" secondAttribute="top" id="ZaP-Ui-IAk"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -39,10 +65,13 @@
                         </subviews>
                         <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="mdk-tq-ebP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="13" id="RDT-jT-f96"/>
-                            <constraint firstItem="mdk-tq-ebP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dGS-vm-34t"/>
+                            <constraint firstAttribute="trailing" secondItem="M0g-2b-eyt" secondAttribute="trailing" id="OgE-7z-uE8"/>
+                            <constraint firstAttribute="trailing" secondItem="mdk-tq-ebP" secondAttribute="trailing" constant="20" id="UEM-nF-yTl"/>
+                            <constraint firstItem="M0g-2b-eyt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dht-OX-gLi"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mdk-tq-ebP" secondAttribute="bottom" constant="16" id="j1q-ZI-Lge"/>
-                            <constraint firstItem="mdk-tq-ebP" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="yUK-wt-y5F"/>
+                            <constraint firstItem="M0g-2b-eyt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="k9Y-Wg-IzK"/>
+                            <constraint firstItem="mdk-tq-ebP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="ssv-KF-Sln"/>
+                            <constraint firstItem="mdk-tq-ebP" firstAttribute="top" secondItem="M0g-2b-eyt" secondAttribute="bottom" constant="21" id="wn2-wh-eVQ"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Players" id="qlI-AK-KmS"/>
@@ -53,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="545.5" y="1303.5"/>
+            <point key="canvasLocation" x="543.5" y="1328.5"/>
         </scene>
         <!--Games-->
         <scene sceneID="jXe-ce-O9t">
@@ -95,4 +124,7 @@
             <point key="canvasLocation" x="835.5" y="460.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="blankPlayer.png" width="600" height="568"/>
+    </resources>
 </document>
